// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrencyLogo renders a currency logo with network logo 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "column",
      "height": 40,
      "justifyContent": "center",
      "width": 40,
    }
  }
  testID="token-logo"
>
  <View
    style={
      {
        "flexDirection": "column",
      }
    }
    testID="img-token-image"
  >
    <img
      height={40}
      onError={[Function]}
      src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
      style={
        {
          "aspectRatio": undefined,
          "backgroundColor": "#2222220D",
          "borderRadius": 20,
          "objectFit": "contain",
        }
      }
      width={40}
    />
  </View>
  <View
    style={
      {
        "borderBottomColor": "#FFFFFF",
        "borderBottomLeftRadius": 8,
        "borderBottomRightRadius": 8,
        "borderBottomWidth": 2,
        "borderLeftColor": "#FFFFFF",
        "borderLeftWidth": 2,
        "borderRightColor": "#FFFFFF",
        "borderRightWidth": 2,
        "borderStyle": "solid",
        "borderTopColor": "#FFFFFF",
        "borderTopLeftRadius": 8,
        "borderTopRightRadius": 8,
        "borderTopWidth": 2,
        "bottom": -2,
        "flexDirection": "column",
        "position": "absolute",
        "right": -3,
      }
    }
  >
    <View
      style={
        {
          "borderColor": "#FFFFFF",
          "borderRadius": 6,
          "flexDirection": "column",
          "overflow": "hidden",
        }
      }
      testID="network-logo"
    >
      <div
        className="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
        dir={null}
        style={
          {
            "height": "16px",
            "width": "16px",
          }
        }
      >
        <div
          className="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-ehq7j7"
          dir={null}
          suppressHydrationWarning={true}
        />
      </div>
    </View>
  </View>
</View>
`;

exports[`CurrencyLogo renders without error 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "column",
      "height": 40,
      "justifyContent": "center",
      "width": 40,
    }
  }
  testID="token-logo"
>
  <View
    style={
      {
        "flexDirection": "column",
      }
    }
    testID="img-token-image"
  >
    <img
      height={40}
      onError={[Function]}
      src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x1f9840a85d5aF5bf1D1762F925BDADdC4201F984/logo.png"
      style={
        {
          "aspectRatio": undefined,
          "backgroundColor": "#2222220D",
          "borderRadius": 20,
          "objectFit": "contain",
        }
      }
      width={40}
    />
  </View>
</View>
`;
